# AIForum

./: .replit  Python_Backend_Workflow.sh  package-lock.json  package.json  pyproject.toml  python_backend.py  python_backend_app.py  python_backend_start.sh  python_flask_app.py  python_server.py  run.py  run_python_backend.py  run_python_workflow.sh  start_python_backend.sh  start_python_server.sh  start_servers.sh  test_aws_credentials.js  test_python_backend.py
attached_assets/: Pasted-The-overall-Problem-statement-is-We-re-building-X-AI-Forum-an-AI-powered-social-Q-A-platform-to-i-1744697262240.txt  content-1744699608602.md
client/src/: App.tsx
client/src/components/: ChatMessage.tsx  Header.tsx  PostQuestion.tsx  QuestionCard.tsx  Sidebar.tsx
client/src/components/auth/: LoginForm.tsx  (+1 more)
client/src/context/: AuthContext.tsx
client/src/hooks/: useForumData.ts
client/src/pages/: AiAssistant.tsx  BedrockTest.tsx  DocumentManagement.tsx  Forum.tsx  Home.tsx  Login.tsx  Register.tsx
python_backend/: main.py  run.py
python_backend/.chromadb/: chroma.sqlite3
python_backend/app/: __init__.py
python_backend/app/models/: storage.py
python_backend/app/routes/: auth.py  chat.py  documents.py  forum.py
python_backend/app/services/: bedrock.py  chromadb_service.py  slack_service.py
python_backend/app/utils/: file_utils.py
python_backend/chroma_db/: chroma.sqlite3
python_services/: bedrock_service.py  chromadb_service.py  slack_service.py
server/: anthropic.ts  awsBedrock.ts  chromadb.ts  routes.ts  slack.ts  storage.ts
shared/: schema.ts
(+2 files in other folders)
