[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "boto3>=1.37.34",
    "chromadb>=1.0.4",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-session>=0.8.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "slack-sdk>=3.35.0",
    "werkzeug>=3.1.3",
]
